-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.6.1, Qt Creator 4.7.0-beta2
-
macOS 10.13.4
I opened 4.6.1 after installing it and it wanted to build a new qmlpuppet emulation layer (with Qt built from the 5.11 branch), so I waited for it to finish, but it crashed at the end.
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libQmlDesigner.dylib 0x00000001179687e4 QmlDesigner::ItemLibraryEntry::name() const + 4 1 libQmlDesigner.dylib 0x0000000117af29d2 QmlDesigner::ItemLibraryItem::itemName() const + 18 2 libQmlDesigner.dylib 0x0000000117af0513 void std::__1::__sort<QmlDesigner::ItemLibrarySectionModel::sortItems()::$_0&, QList<QmlDesigner::ItemLibraryItem*>::iterator>(QList<QmlDesigner::ItemLibraryItem*>::iterator, QList<QmlDesigner::ItemLibraryItem*>::iterator, QmlDesigner::ItemLibrarySectionModel::sortItems()::$_0&) + 915 3 libQmlDesigner.dylib 0x0000000117af005e QmlDesigner::ItemLibrarySectionModel::sortItems() + 286 4 libQmlDesigner.dylib 0x0000000117aea558 QmlDesigner::ItemLibraryModel::sortSections() + 440 5 libQmlDesigner.dylib 0x0000000117ae9ab3 QmlDesigner::ItemLibraryModel::update(QmlDesigner::ItemLibraryInfo*, QmlDesigner::Model*) + 3891 6 libQmlDesigner.dylib 0x0000000117ae14bc QmlDesigner::ItemLibraryWidget::updateModel() + 92 7 org.qt-project.QtCore 0x000000010d5c5f7b QMetaObject::activate(QObject*, int, int, void**) + 2347 8 org.qt-project.QtCore 0x000000010d5cdbb2 QTimer::timerEvent(QTimerEvent*) + 98 9 org.qt-project.QtCore 0x000000010d5be1a6 QObject::event(QEvent*) + 102 10 org.qt-project.QtWidgets 0x000000010c8dd752 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 306 11 org.qt-project.QtWidgets 0x000000010c8dea6f QApplication::notify(QObject*, QEvent*) + 383 12 org.qt-project.QtCore 0x000000010d594f7f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159 13 org.qt-project.QtCore 0x000000010d5ebefa QTimerInfoList::activateTimers() + 890 14 libqcocoa.dylib 0x000000010fb2f6d2 0x10fb07000 + 165586 15 com.apple.CoreFoundation 0x00007fff2f307a61 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 16 com.apple.CoreFoundation 0x00007fff2f3c147c __CFRunLoopDoSource0 + 108 17 com.apple.CoreFoundation 0x00007fff2f2ea51c __CFRunLoopDoSources0 + 300 18 com.apple.CoreFoundation 0x00007fff2f2e993d __CFRunLoopRun + 1293 19 com.apple.CoreFoundation 0x00007fff2f2e91a3 CFRunLoopRunSpecific + 483 20 com.apple.HIToolbox 0x00007fff2e5d1d96 RunCurrentEventLoopInMode + 286 21 com.apple.HIToolbox 0x00007fff2e5d1a0f ReceiveNextEventCommon + 366 22 com.apple.HIToolbox 0x00007fff2e5d1884 _BlockUntilNextEventMatchingListInModeWithFilter + 64 23 com.apple.AppKit 0x00007fff2c884a73 _DPSNextEvent + 2085 24 com.apple.AppKit 0x00007fff2d01ae34 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 3044 25 com.apple.AppKit 0x00007fff2c879885 -[NSApplication run] + 764 26 libqcocoa.dylib 0x000000010fb303ad 0x10fb07000 + 168877 27 org.qt-project.QtCore 0x000000010d590a72 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 28 org.qt-project.QtCore 0x000000010d595692 QCoreApplication::exec() + 402 29 org.qt-project.qtcreator 0x000000010c63201a main + 17450 30 libdyld.dylib 0x00007fff57603015 start + 1
For Gerrit Dashboard: QTCREATORBUG-20364 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
298072,2 | QmlDesigner: crash workaround | 4.12 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |