QmlDesigner: crash workaround

Disable the timer to be safe. The issue is bothering us for a
very long time and we were not able to find the real
cause.

Task-number: QDS-343
Task-number: QDS-1984
Task-number: QTCREATORBUG-20364
Change-Id: I5023f27be25ba7971db80990eeb9562fd63dc15d
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>