src/plugins/qmldesigner/designersettings.cpp
@@ -84,6 +84,7 @@ void DesignerSettings::fromSettings(QSettings *settings)
                  );
     restoreValue(settings, DesignerSettingsKey::SIMPLE_COLOR_PALETTE_CONTENT, QStringList());
     restoreValue(settings, DesignerSettingsKey::ALWAYS_DESIGN_MODE, true);
+    restoreValue(settings, DesignerSettingsKey::DISABLE_ITEM_LIBRARY_UPDATE_TIMER, true);
 
     settings->endGroup();
     settings->endGroup();
